Blender crashes on sculpting with dynamic topology activated #33718

Closed
opened 2012-12-31 15:41:48 +01:00 by Vicens Juan Tomàs Montserrat · 8 comments

%%%Blender crashes on sculpting with dynamic topology activated. See attached video.

Blender 2.54.4 (r53454) downloaded from builder.blender.org.
OS: Linux 64 (Kubuntu 12.10 KDE)
Graphics card: Nvidia GTX560Ti - driver 313.09 beta.%%%

%%%Blender crashes on sculpting with dynamic topology activated. See attached video. Blender 2.54.4 (r53454) downloaded from builder.blender.org. OS: Linux 64 (Kubuntu 12.10 KDE) Graphics card: Nvidia GTX560Ti - driver 313.09 beta.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I see a segmentation fault in terminal.%%%

%%%I see a segmentation fault in terminal.%%%

%%%Ah! without multires modifier works fine.%%%

%%%Ah! without multires modifier works fine.%%%

%%%Specifically, the error seems to be in the smoothing brush with multiresolution modifier enabled.%%%

%%%Specifically, the error seems to be in the smoothing brush with multiresolution modifier enabled.%%%
Member

%%%Please, always attach the simplest possible .blend file here with minimal instructions how to redo errors.
%%%

%%%Please, always attach the simplest possible .blend file here with minimal instructions how to redo errors. %%%

%%%Confirmed there are some issues with multires modifier enabled, will investigate.%%%

%%%Confirmed there are some issues with multires modifier enabled, will investigate.%%%

%%%Fixed in r53610.%%%

%%%Fixed in r53610.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33718
No description provided.