Disable multires in sculpt mode if dynamic-topology mode is enabled

sculpt_multires_active() now returns NULL if dynamic topology is
enabled. Fixes bug #33718:
projects.blender.org/tracker/?func=detail&aid=33718&group_id=9&atid=498